--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ ul {
 :root {
     --primary-color: #d3AB9E;
     --secondary-color: #ebd8D0;
-    --tertiary-color: #eac9c1;
+    --tertiary-color: rgb(44, 41, 41);
     --text-color: #363636;
 }
 * {
@@ -36,12 +36,20 @@ body {
     width: 100%;
 }
 
-.home {
+section {
     margin-left: 50px;
+    margin-bottom: 70px;
+    width: 600px;
 }
+
+h2 {
+    font-size: 35px;
+    margin-bottom: 20px;
+}
+
+/* HOME */
 .home .presentation {
     padding-top: 100px;
-    width: 600px;
 }
 .home h1 {
     font-family: 'Courgette';
@@ -96,4 +104,50 @@ body {
 .nav-wrap nav ul li a:visited {
     color: var(--secondary-color);
     text-shadow: rgba(0, 0, 0, 0.8);
+}
+
+/* PROJECTS */
+.projects {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+.projects .card-project {
+    width: 500px;
+    background-color: var(--tertiary-color);
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.356);
+    border-radius: 25px;
+}
+.projects .card-project .card-content {
+    color: var(--secondary-color);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.projects .card-project .card-content .text {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    text-align: center;
+    padding: 10px 0 10px 0;
+}
+.projects .card-project .card-img {
+    width: 100%;
+    object-fit: cover;
+    border-radius: 25px 25px 0 0;
+}
+.projects .card-project .card-content .link-project {
+    color: var(--secondary-color);
+    text-decoration: none;
+    font-size: 17px;
+}
+.projects .card-project .card-content .link-project:visited {
+    color: var(--secondary-color);
+}
+.projects .card-project .card-content .link-project:hover {
+    filter: brightness(110%);
+    text-shadow: 0 2px 20px rgba(255, 255, 255, 0.274);
 }
