--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/* Images avec bas couvert progressivement au scroll
+bordure entre deux section arrondie
+video au lieu de photo */
 /* RESET */
 body, div, ul, li, h1, h2, h3, form, fieldset, input, textarea, p {
   margin: 0;
@@ -18,10 +21,10 @@ ul {
 }
 
 :root {
-    --primary-color: #d3AB9E;
-    --secondary-color: #ebd8D0;
-    --tertiary-color: rgb(44, 41, 41);
-    --text-color: #363636;
+    --primary-color: rgb(44, 41, 41);
+    --secondary-color: #363636;
+    --tertiary-color: #d3AB9E;
+    --text-color: #ebd8D0;
 }
 * {
     margin: 0;
@@ -36,12 +39,6 @@ body {
     width: 100%;
 }
 
-section {
-    margin-left: 50px;
-    margin-bottom: 70px;
-    width: 600px;
-}
-
 h2 {
     font-size: 35px;
     margin-bottom: 20px;
@@ -49,61 +46,92 @@ h2 {
 
 /* HOME */
 .home .presentation {
-    padding-top: 100px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    font-size: 25px;
+    z-index: 1;
 }
 .home h1 {
     font-family: 'Courgette';
-    font-size: 70px;
+    font-size: 80px;
     text-shadow: 0 4px 7px rgba(0, 0, 0, 0.253);
     margin-bottom: 30px;
 }
-.home img {
+.home-background {
     position: fixed;
     top: 0;
-    right: 0;
-    height: 1200px;
-    width: 600px;
-    object-fit: cover;
-    border-left: 1px solid rgba(0, 0, 0, 0.466);
-    border-right: 2px solid black;
-    box-shadow: inset 600px 0 rgba(0, 0, 0, 0.274);
+    left: 0;
+    width: 100%;
+    filter: brightness(0.8);
+    z-index: 1;
 }
 
 .nav-wrap {
     position: fixed;
-    top: 150px;
-    right: 100px;
+    top: 20px;
+    width: 100%;
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    height: 300px;
-    width: 250px;
-    background-color: rgba(255, 255, 255, 0.1);
-    box-shadow: 0 10px 40px rgba(0, 0, 0, 0.8);
-    backdrop-filter: blur(8px);
-    border: 1px solid rgba(255, 255, 255, 0.2);
-    border-radius: 25px;
-    padding: 30px 0 30px 70px;
-    z-index: 2;
+    z-index: 3;
 }
 
-.nav-wrap nav ul li {
-    margin-bottom: 22px;
+.nav-wrap nav {
+    background-color: rgba(255, 255, 255, 0.1);
+    box-shadow: 0 10px 40px rgba(0, 0, 0, 0.281);
+    backdrop-filter: blur(8px);
+    border-radius: 25px;
+    padding: 20px 30px 20px 30px;
+}
+
+.nav-wrap nav ul {
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
 }
 
 .nav-wrap nav ul li a {
-    color: var(--secondary-color);
+    color: var(--text-color);
     text-decoration: none;
-    text-shadow: 0 4px 20px rgba(0, 0, 0, 0.8);
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.39);
     font-size: 22px;
 }
 .nav-wrap nav ul li a:hover {
-    filter: brightness(110%);
-    text-shadow: 0 2px 20px rgba(255, 255, 255, 0.274);
+    filter: brightness(101%);
+    text-shadow: 0 2px 20px rgba(255, 255, 255, 0.144);
 }
 .nav-wrap nav ul li a:visited {
-    color: var(--secondary-color);
-    text-shadow: rgba(0, 0, 0, 0.8);
+    color: var(--text-color);
+}
+
+/* SECTIONS */
+.wrap-sections {
+    position: absolute;
+    top: 800px;
+    z-index: 2;
+    background-color: var(--primary-color);
+    width: 100%;
+    border-radius: 70px 70px 0 0;
+}
+
+/* FORMATION */
+.formation {
+    margin-top: 50px;
+    margin-left: 50px;
+}
+
+/* COMPETENCES */
+.competences {
+    margin-top: 50px;
+    margin-left: 50px;
 }
 
 /* PROJECTS */
@@ -111,14 +139,20 @@ h2 {
     display: flex;
     flex-direction: column;
     gap: 30px;
+    margin-top: 50px;
+    margin-left: 50px;
 }
-.projects .card-project {
+.projects .wrap-cards {
+    display: flex;
+    gap: 30px;
+}
+.projects .wrap-cards .card-project {
     width: 500px;
     background-color: var(--tertiary-color);
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.356);
     border-radius: 25px;
 }
-.projects .card-project .card-content {
+.projects .wrap-cards .card-project .card-content {
     color: var(--secondary-color);
     width: 100%;
     display: flex;
@@ -126,7 +160,7 @@ h2 {
     justify-content: center;
     align-items: center;
 }
-.projects .card-project .card-content .text {
+.projects .wrap-cards .card-project .card-content .text {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -134,20 +168,26 @@ h2 {
     text-align: center;
     padding: 10px 0 10px 0;
 }
-.projects .card-project .card-img {
+.projects .wrap-cards .card-project .card-img {
     width: 100%;
     object-fit: cover;
     border-radius: 25px 25px 0 0;
 }
-.projects .card-project .card-content .link-project {
+.projects .wrap-cards .card-project .card-content .link-project {
     color: var(--secondary-color);
     text-decoration: none;
     font-size: 17px;
 }
-.projects .card-project .card-content .link-project:visited {
+.projects .wrap-cards .card-project .card-content .link-project:visited {
     color: var(--secondary-color);
 }
-.projects .card-project .card-content .link-project:hover {
+.projects .wrap-cards .card-project .card-content .link-project:hover {
     filter: brightness(110%);
     text-shadow: 0 2px 20px rgba(255, 255, 255, 0.274);
+}
+
+/* CONTACT */
+.contact {
+    margin-top: 50px;
+    margin-left: 50px;
 }
