--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 bordure entre deux section arrondie
 video au lieu de photo */
 /* RESET */
-body, div, ul, li, h1, h2, h3, form, fieldset, input, textarea, p {
+body, div, ul, li, h1, h2, h3, h4, form, fieldset, input, textarea, p {
   margin: 0;
   padding: 0;
 }
@@ -27,13 +27,14 @@ a {
 :root {
     --primary-color: rgb(44, 41, 41);
     --secondary-color: #363636;
-    --tertiary-color: #d3AB9E;
+    --tertiary-color: #d39ea5;
     --text-color: #ebd8D0;
+    --text-white: white;
 }
 
 body {
 	background: var(--primary-color);
-    color: var(--text-color);
+    color: var(--text-white);
     font-family: Arial, sans-serif;
     font-size: 20px;
     width: 100%;
@@ -44,12 +45,21 @@ h2 {
     margin-bottom: 20px;
 }
 
+h3 {
+    text-align: center;
+    padding-bottom: 5px;
+}
+
+h4 {
+    padding-top: 10px;
+}
+
 a {
-    color: var(--text-color);
+    color: var(--tertiary-color);
 }
 
 a:visited {
-    color: var(--text-color);
+    color: var(--text-white);
 }
 
 a:hover {
@@ -59,7 +69,7 @@ a:hover {
 
 /* ICONS */
 .fa-solid .fa-bars {
-    color: white;
+    color: var(--text-white);
 }
 
 /* HOME */
@@ -135,7 +145,7 @@ a:hover {
 }
 
 .nav-wrap nav ul li a {
-    color: white;
+    color: var(--text-white);
     text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.39);
     font-size: 22px;
 }
@@ -143,7 +153,7 @@ a:hover {
     text-shadow: 0 2px 20px rgba(255, 255, 255, 0.144);
 }
 .nav-wrap nav ul li a:visited {
-    color: white;
+    color: var(--text-white);
 }
 
 /* SECTIONS */
@@ -173,46 +183,60 @@ a:hover {
 .projects {
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 50px;
     align-items: center;
     width: 100%;
 }
 .projects .wrap-cards {
     display: flex;
+    flex-direction: column;
+    gap: 150px;
+    align-items: center;
     width: 100%;
-    border-top: 1px solid white;
-    border-bottom: 1px solid white;
 }
 .projects .wrap-cards .card-project {
-    width: 50%;
-    border-right: 1px solid white;
-}
-.projects .wrap-cards .card-project .card-content {
-    width: 100%;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    flex-direction: row;
+    gap: 150px;
+    width: 70%;
 }
-.projects .wrap-cards .card-project .card-content .text {
-    width: 100%;
+.projects .wrap-cards .second-card {
+    flex-direction: row-reverse;
+}
+.projects .wrap-cards .card-project .text {
+    width: 400px;
     display: flex;
     flex-direction: column;
     gap: 5px;
-    text-align: center;
-    border-top: 1px solid white;
+    background-color: rgba(255, 255, 255, 0.1);
+    border: 1px solid rgba(255, 255, 255, 0.116);
+    box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.089);
+    border-radius: 10px;
+    padding: 10px 5px 10px 10px;
 }
-.projects .wrap-cards .card-project .card-img {
-    width: 95%;
-    height: 300px;
-    object-fit: cover;
+.projects .wrap-cards .card-project .card-img-wrap {
+    width: 800px;
+    overflow: hidden;
+    box-shadow: 5px 15px 10px rgba(0, 0, 0, 0.199);
+    border-radius: 15px;
 }
-.projects .wrap-cards .card-project .card-content .link-project {
+.projects .wrap-cards .card-project .card-img-wrap .card-img {
+    width: 100%;
+    height: 100%;
+    scale: 1.3;
+    transition: scale 0.4s ease-out;
+}
+.projects .wrap-cards .card-project .card-img-wrap .card-img:hover {
+    scale: 1;
+}
+.projects .wrap-cards .card-project .link-project {
+    color: var(--tertiary-color);
     text-decoration: none;
-    font-size: 17px;
+    font-size: 19px;
 }
-.projects .wrap-cards .card-project .card-content .link-project:hover {
+.projects .wrap-cards .card-project .link-project:hover {
     text-shadow: 2px 2px 20px rgba(0, 0, 0, 0.274);
+    filter: brightness(110%);
 }
 
 /*CONTACT*/
