--- a/style.css
+++ b/style.css
@@ -101,11 +101,19 @@ a:hover {
     display: none;
 }
 
-.nav-button i {
+#language-btn {
+    position: fixed;
+    top: 20px;
+    right: 60px;
+    z-index: 4;
+    cursor: pointer;
+}
+
+.nav-button #icon-nav {
     position: fixed;
     top: 15px;
     right: 15px;
-    font-size: 25px;
+    width: 25px;
     z-index: 4;
     cursor: pointer;
 }
